fixed overflowx

--- a/src/style/aboutme.scss
+++ b/src/style/aboutme.scss
@@ -1,6 +1,8 @@
 #aboutme {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
+
   padding: 6rem 8rem;
   .aboutBox {
     box-shadow: 1px 4px 10px black;
