--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -2,6 +2,7 @@
     background-color: black;
     width: 100%;
     padding: 1.5rem 3rem ;
+    overflow-x: hidden;
 
     .top{
         display: flex;
