--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -4,6 +4,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow-x: hidden;
 
 
     background-color: $color1;
