--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 90vh;
     display: flex;
+    overflow-x: hidden;
+
     >section{
         width: 100%;
         &:first-of-type{
