--- a/src/style/mediaquery.scss
+++ b/src/style/mediaquery.scss
@@ -336,6 +336,7 @@
   }
   #skills {
     width: 90%;
+    height: 100%;
   }
   #contact {
     .container {
