--- a/src/style/skills.scss
+++ b/src/style/skills.scss
@@ -1,8 +1,9 @@
 #skills{
-    width: 80%;
-    height: 100vh;
+    overflow-x: hidden;
+    width: 85%;
+    height: 100%;
     margin: auto;
-    padding-top: 3rem;
+    padding: 3rem 1rem;
     >h1{
         font: 700 2rem $font5 ;
         padding: 2rem;
